# International-hackathon-08-11-2024

./: .gitignore  README.md  TODO.md  docker-compose.yaml  dump.rdb  pyproject.toml
docker/server/: Dockerfile
rag/: __init__.py  debug.py  draft  draft.py  rag.py  tester.py
rag/chunker/: chunker.py
rag/data/chroma_db/: chroma.sqlite3
rag/data/chroma_db/fc47d3c8-a991-4d3d-9c75-062f0092d028/: index_metadata.pickle
rag/data/tests/: ans.txt  sample_submission.csv  submission.xlsx  test.txt
rag/llm/: llm_methods.py
rag\rag\data\chroma_db/: chroma.sqlite3
ragrag/data/chroma_db/: chroma.sqlite3
web/: README.md  app.py  index.html  script.js  style.css
web/server/: __init__.py  loader.py  requester.py  utils.py
web/server/database/: redis_tools.py
web/server/static/: script.js  style.css
web/server/templates/: index.html
